<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HistoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fragment_history_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.30" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/fragment_history_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/fragment_history_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/title_fragment_history"
                app:titleTextColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fragment_history_text_from"
                    android:layout_width="59dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:padding="8dp"
                    android:text="@string/fragment_history_text_from"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/fragment_history_from_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:clickable="true"
                    android:padding="8dp"
                    android:text="@string/fragment_history_default_date"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/fragment_history_from_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:clickable="true"
                    android:padding="8dp"
                    android:text="@string/fragment_history_default_time"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fragment_history_text_to"
                    android:layout_width="59dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:padding="8dp"
                    android:text="@string/fragment_history_text_to"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/fragment_history_to_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:clickable="true"
                    android:padding="8dp"
                    android:text="@string/fragment_history_default_date"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/fragment_history_to_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:clickable="true"
                    android:padding="8dp"
                    android:text="@string/fragment_history_default_time"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/fragment_history_seekbar_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_weight="0.8" />

                <TextView
                    android:id="@+id/fragment_history_seekbar_time_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:padding="8dp"
                    android:text="@string/fragment_history_seekbar_time"
                    android:textSize="18sp"
                    android:layout_weight="0.15"/>
            </LinearLayout>


            <Button
                android:id="@+id/fragment_history_button_refresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_history_button_refresh" />

        </LinearLayout>

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/fragment_history_bar_chart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>